Fixed clipped avatars in Notifications

--- a/TangerineUI.css
+++ b/TangerineUI.css
@@ -5680,6 +5680,9 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 .app-body .notification-ungrouped .status::before {
     display: none;
 }
+.app-body .notification-group__main {
+    overflow: unset;
+}
 .app-body .notification-group__main__status {
     border: 1px solid var(--color-content-secondary-bg);
     background-color: var(--color-content-secondary-bg);
